--- a/html/IT-report.html
+++ b/html/IT-report.html
@@ -16,6 +16,7 @@
         <a href="IT-report.html">IT Report</a>
         <a href="project.html">Project</a>
         <a href="pdf.html">Report PDF</a>
+        <a href="https://github.com/Stephen-McCluskey/IIT-A2">Our Repository</a>
       </div>
       <div>
         <h2 class="tophead">Industry Data</h2>
