added line breaks - CS

--- a/html/IT-report.html
+++ b/html/IT-report.html
@@ -252,7 +252,7 @@
           <h3>What does it do?</h3>
           <p>
             Cyber Security is often described or referred to as [1] the body of technologies, processes, and practices designed to protect networks,
-            devices, programs, and data from attack, damage, or unauthorized access. Cyber security (CS) has always been a major aspect of IT 
+            devices, programs, and data from attack, damage, or unauthorized access. </br></br> Cyber security (CS) has always been a major aspect of IT 
             innovation, however its relevance within society nowadays has grown exponentially, as more and more people have moved to the web with
             their personal information at a risk to intrusion and corruption by those with malicious intent. While this area of information
             technology is fast developing, the transformation of ideas on how to best protect personal and private info has changed significantly.
@@ -260,7 +260,7 @@
             info when exchanging info, in which both users rely on primary keys (password for password locked information) to access the encrypted 
             information. Or something such as [2] ‘Single Use Softwares’, which is used in-order to protect purchasable, intellectual property 
             that in the past would be pirated. Which to briefly sum up involves the use of quantum computers to build single use software tools 
-            from light particles, in the attempt to prevent intellectual property such as code from being pirated, or a malicious attack. Whilst
+            from light particles, in the attempt to prevent intellectual property such as code from being pirated, or a malicious attack.</br></br> Whilst
             in modern times, the latest and greatest within tech development involves the use of AI and the automation of data collection. This new
             era of automation, especially within the realm of CS could potentially redesign the way info is stored, shared and protected, as 
             processes won't be controlled with the potential of human error. Rather controlled with precision based on the events the AI is taught
