--- a/html/pdf.html
+++ b/html/pdf.html
@@ -20,7 +20,7 @@
       </div>
       <h2 class="tophead">Report PDF</h2>
       <p>
-        You can download the pdf of our report <a href="../Intro_to_IT_-_Assignment_2_-_Team_VibeCheck.pdf">here</a>.
+        You can download the pdf of our report <a href="Intro to IT - Assignment 2 - Team VibeCheck.pdf">here</a>.
       </p>
     </div>
   </body>
