update tooltip in pdf.html

--- a/html/pdf.html
+++ b/html/pdf.html
@@ -16,7 +16,7 @@
         <a href="IT-report.html">IT Report</a>
         <a href="project.html">Project</a>
         <a href="pdf.html">Report PDF</a>
-        <a title="Click here to go to our repository" href="https://github.com/Stephen-McCluskey/IIT-A2">Our Repository</a>
+        <a title="Click here to go to our GitHub repository" href="https://github.com/Stephen-McCluskey/IIT-A2">Our Repository</a>
       </div>
       <h2 class="tophead">Report PDF</h2>
       <p>
