add tooltip for repository in main html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <a href="html/IT-report.html">IT Report</a>
       <a href="html/project.html">Project</a>
       <a href="html/pdf.html">Report PDF</a>
-      <a href="https://github.com/Stephen-McCluskey/IIT-A2">Our Repository</a>
+      <a title="Click here to go to our GitHub repository" href="https://github.com/Stephen-McCluskey/IIT-A2">Our Repository</a>
     </div>
     <div class="sect" id="pInfo">
       <h2 class="tophead">Personal Information</h2>
