changed menubar pdf --> pdfs

--- a/html/project.html
+++ b/html/project.html
@@ -15,7 +15,7 @@
         <a href="../index.html">Home</a>
         <a href="IT-report.html">IT Report</a>
         <a href="project.html">Project</a>
-        <a href="pdf.html">Report PDF</a>
+        <a href="pdf.html">Report PDFs</a>
         <a title="Click here to go to our GitHub repository" href="https://github.com/Stephen-McCluskey/IIT-A2">Our Repository</a>
       </div>
       <h2 class="tophead">Project</h2>
