update menubar pdf --> pdfs, fix report 2 link
still needs report 3 link

--- a/html/pdf.html
+++ b/html/pdf.html
@@ -15,12 +15,15 @@
         <a href="../index.html">Home</a>
         <a href="IT-report.html">IT Report</a>
         <a href="project.html">Project</a>
-        <a href="pdf.html">Report PDF</a>
+        <a href="pdf.html">Report PDFs</a>
         <a title="Click here to go to our GitHub repository" href="https://github.com/Stephen-McCluskey/IIT-A2">Our Repository</a>
       </div>
       <h2 class="tophead">Report PDF</h2>
       <p>
-        You can download the pdf of our report <a href="Intro to IT - Assignment 2 - Team VibeCheck.pdf">here</a>.
+        You can view the pdf of our Assignment 3 report <a href="../?">here</a>.
+      </p>
+      <p>
+        You can view the pdf of our Assignment 2 report <a href="../Intro to IT - Assignment 2 - Team VibeCheck.pdf">here</a>.
       </p>
     </div>
   </body>
