changed menubar pdf --> pdfs

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <a href="index.html">Home</a>
       <a href="html/IT-report.html">IT Report</a>
       <a href="html/project.html">Project</a>
-      <a href="html/pdf.html">Report PDF</a>
+      <a href="html/pdf.html">Report PDFs</a>
       <a title="Click here to go to our GitHub repository" href="https://github.com/Stephen-McCluskey/IIT-A2">Our Repository</a>
     </div>
     <div class="sect" id="pInfo">
