Added topic section - ass3

--- a/html/project.html
+++ b/html/project.html
@@ -71,5 +71,27 @@
             to not only access the application and track performance, but also allow the user to select and listen to music.</li>
         </ul>
       </p>
+    </div> 
+    <div>
+      <h2 class="tophead">Assigment 3: Project Plan</h2>
+      <h2>Topic</h2>
+      <p>Our group ‘VibeCheck’ has decided to move forward with the initial proposal of the HUDFitness glasses from Stephen’s
+        Assignment 1, and ‘VibeChecks’ Assignment 2. Our group VibeCheck had chosen this project for a multitude of reasons
+        ranging from AR’s yet to be fully explored market opportunities, to things such as how cool it’ll be to own a technology
+        such as this. However, we at VibeCheck ultimately value and hold our desire to develop, research and commercialise the 
+        HUDFitness to our wish to provide cheap and affordable AR technology (ranging from simple to high Standard) to everyone at
+        a price equivalent to that of prescription glasses, and while a pursuit such as this is currently far-fetched due to the
+        monetary implications, a yet to be fully discovered market such as this can have a huge impact on the fitness industry.
+      </p>
+      <p>Moreover, the VibeCheck team also aspires to not only produce the AR capable services for the fitness industry, but also
+      wishes to in future expand the potential consumers of the glasses by diversifying, and building on the abilities of the AR
+      glasses to be used in scenarios other than ones that are fitness related. We wish to provide future consumers the ability
+      to display and track any and all tasks they do, ranging from the initial fitness direction VibeCheck has taken, to things such 
+      as the food, construction and even military scene. This is ultimately our end goal at VibeCheck, as providing an AR service 
+      which could assist in everyday life ranging from physical activities to cooking or even work related things, serves our goal
+      to provide a service that could be sold at a commercial level at reasonable prices. 
+      </p>
+
+
     </div>
   </body>
