removed added <div></div>

--- a/html/project.html
+++ b/html/project.html
@@ -71,9 +71,8 @@
             to not only access the application and track performance, but also allow the user to select and listen to music.</li>
         </ul>
       </p>
-    </div> 
-    <div>
-      <h2 class="tophead">Assigment 3: Project Plan</h2>
+ 
+      <h2>Assigment 3: Project Plan</h2>
       <h2>Topic</h2>
       <p>Our group ‘VibeCheck’ has decided to move forward with the initial proposal of the HUDFitness glasses from Stephen’s
         Assignment 1, and ‘VibeChecks’ Assignment 2. Our group VibeCheck had chosen this project for a multitude of reasons
