removed 2nd header for topic

--- a/html/project.html
+++ b/html/project.html
@@ -72,8 +72,7 @@
         </ul>
       </p>
  
-      <h2>Assigment 3: Project Plan</h2>
-      <h2>Topic</h2>
+      <h2>Assigment 3: Project Plan - Topic</h2>
       <p>Our group ‘VibeCheck’ has decided to move forward with the initial proposal of the HUDFitness glasses from Stephen’s
         Assignment 1, and ‘VibeChecks’ Assignment 2. Our group VibeCheck had chosen this project for a multitude of reasons
         ranging from AR’s yet to be fully explored market opportunities, to things such as how cool it’ll be to own a technology
