change page title and alter headers for clarity
title IT report --> Our Project

--- a/html/project.html
+++ b/html/project.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>IT Report</title>
+    <title>Our Project</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="../style.css">
     <link rel="icon" 
@@ -18,7 +18,8 @@
         <a href="pdf.html">Report PDFs</a>
         <a title="Click here to go to our GitHub repository" href="https://github.com/Stephen-McCluskey/IIT-A2">Our Repository</a>
       </div>
-      <h2 class="tophead">Project</h2>
+      <h2 class="nobox tophead">Our Project</h2>
+      <h2 class="tophead">Assignment 2 Plan</h2>
       <p>
         When our group decided to suggest creating a project which incorporates different aspects of ALL our individuals 
         ideas in assignment 1, we spent a significant portion of a group meeting attempting to all agree on the outcome,
@@ -72,7 +73,8 @@
         </ul>
       </p>
  
-      <h2>Assigment 3: Project Plan - Topic</h2>
+      <h2 clss="nobox tophead">Assigment 3: Project Plan</h2>
+      <h2 class="tophead">Topic</h2>
       <p>Our group ‘VibeCheck’ has decided to move forward with the initial proposal of the HUDFitness glasses from Stephen’s
         Assignment 1, and ‘VibeChecks’ Assignment 2. Our group VibeCheck had chosen this project for a multitude of reasons
         ranging from AR’s yet to be fully explored market opportunities, to things such as how cool it’ll be to own a technology
