--- a/html/pdf.html
+++ b/html/pdf.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>IT Report</title>
+    <title>Report PDFs</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="../style.css">
     <link rel="icon" 
