added all Stephen - Project section

--- a/html/project.html
+++ b/html/project.html
@@ -91,7 +91,79 @@
       which could assist in everyday life ranging from physical activities to cooking or even work related things, serves our goal
       to provide a service that could be sold at a commercial level at reasonable prices. 
       </p>
+     <h2>Motivation</h2>
+      <p>Originally this project was chosen to serve as a filler until such time as our group had decided on another idea. However, 
+        upon delving deeper into the HUDFitness proposal, we found that this technology is currently not fully explored and AR’s
+        potential future within a modernised society could be limitless in terms of not only monetary, but also design and development
+        opportunities. This sudden interest expressed by our group came from this potentially limitless market, by which consumers
+        will have the ability to track, and augment any task/ statistic that they may wish to accomplish. 
+      </p>
+      <p>This kind of virtual tracking assistance isn't that far-fetched in terms of the market either, with a small handful of
+        companies (primarily large, well established one such as apple and microsoft) striving towards the production of AR capable
+        solutions for their pre-existing software, such as but not limited to the implementation of maps, car speed and gear 
+        monitoring, and even the implementation of AR within a variety of shopping situations. Through this it is easy to see that
+        VibeCheck wishes to provide a performance-tracking service to individuals within the fitness industry, and possibly in the
+        future provide a more well-rounded and beneficial day-to-day AR service that falls in line with current IT trends expressed 
+        by more established companies.
+      </p>
+      <p>Furthermore, if we had the ability to successfully produce a technology such as this with all the features expressed within
+        the design listed below, it would not only demonstrate the ability to work well with and understand coding at a professional
+        level (due to the extensive need to produce an ever changing and customisable UI and the need to connect the display tracked
+        information with the preset software algorithms of the programs it will be requiring for function.), but also demonstrates to
+        an employer our ability to dedicate our time, and strive toward a goal with all intent of producing a service which falls into
+        standards that were preset by the groups goals.
+      </p>
+      <h2>Landscape</h2>
 
 
+      <h2>Aim and Goals</h2>
+      <p> The ultimate aim of VibeChecks project is to not only produce and provide an AR service to consumers on a commercial level,
+        at an affordable price in comparison to that of the AR tech currently in circulation (view above for competitive prices), 
+        but to normalise the use of AR within individual everyday life. Although currently AR is very expensive and out of reach for
+        individuals who aren't willing to pay upwards of $500 + for a simple/limited function tech (these technologies can jump up to
+        $10000+ if you decide to allow another company to work on and develop your tech for you),  by commercialising this product
+        and keeping the product within a price range similar to that of prescription glasses, it serves the groups aim to implement AR
+        within a range of daily tasks that individuals/consumers could benefit from, at a price range that consumers would be more
+        willing to purchase the product at.
+      </p>
+      <p>Goal 1: reduce the overall price of AR tech Our group strives to drastically reduce the price of AR tech while still maintaining the integrity of the services. By doing this, it
+        serves our groups aim to normalise this tech, instigating more sales to a wider census than excessive pricing which aims to 
+        serve a small tech savvy consumer group. This desire for our group to utilise cheaper prices for high end products not only
+        aims to assist the introduction of AR capable technologies from being used and implemented, but also acts as a drive for
+        competitors to produce greater more updated tech at more reasonable prices. 
+      </p>
+      <p>Goal 2: increase the functionality of the HUDFitness tech to a point that they are beneficial in areas other than fitness.
+        Another goal our group discussed is the idea of future expansion of the initial project idea to better implement areas other
+        than the fitness industry we have currently limited our project to. The notion of future expansion was brought up earlier on
+        within our discussions, when we talked about competitors and potential avenues of AR in which they or we could take/ implement 
+        into future designs if we had the ability to produce this product. Some such ideas included (but weren’t limited to) supplying
+        HUD with the ability to act as a virtual navigator, used in cooking (displaying recipes and ingredients in real time.) or even
+        across things such as construction and interior design. The directions in which the HUD glasses can be taken allows for a lot
+        of avenues in which our glasses can be taken when targeting new census groups and consumers.
+      </p>
+      <h2>Scopes and Limits</h2>
+      <p>The biggest limiting factor for such a technology is the cost of manufacturing of this new technology, and while we at
+        VibeCheck wish to minimise the expenses of the consumer in the long run, this may take a multitude of years due to the multitude
+        of factors affecting the development of such innovative technology. These factors include the platform and business model in
+        which the AR solution will run on, which has been documented to range from $50,000 - $2.5 million in extreme gaming cases for
+        the products creator. This kind of pricing requires companies to sell the products at a higher price to just break even,
+        meaning that the $500 + price tag we are currently seeing for the AR lenses today will remain until such time as the 
+        development prices decrease (they will decrease once the technology becomes mandatory in for working class citizens and is no
+        longer considered new and innovative).
+      </p>
+      <p>For the AR capable glasses to work it requires the use of a laser display (similar to that of the current HUD displays used
+        in cars) that will pass the displayed images across the lens’  photopolymer material that will display the images being 
+        transmitted by the light. This is more of  a limit to the abilities of the hardware currently in use, as there is no UI lens 
+        capable of just displaying information without an input display function.
+      </p>
+      <p>The HUDFitness glasses will be limited to that of an accessory item which will complement the user phone, and only work in
+        conjunction with the app to operate the glasses display. But a tech that could be used to create a less dependant feel to the
+        glasses would be the creation of a technology similar to that of a ‘Starboard’, which is a tool developed by apple (a little
+        panel on the side of the glasses which allows the user to use gestures when trying to perform specific functions. But a tool
+        like this would take a long time to develop and implement, especially with a team of only 4 working on it.
+      </p>
+      <p>The main material used within this product will most likely be plastic as metal only serves to increase the cost of production,
+        and ultimately the price the consumer would need to pay.
+      </p>
     </div>
   </body>
