added more to the limitations section

--- a/html/project.html
+++ b/html/project.html
@@ -165,5 +165,9 @@
       <p>The main material used within this product will most likely be plastic as metal only serves to increase the cost of production,
         and ultimately the price the consumer would need to pay.
       </p>
+      <p>The glasses won't be able to remain fully function for an extended period of time as the glasses won't be connected via cable 
+        rather bluetooth, meaning the user will need to charge the glasses before use, and the glasses should be able to function for
+        a minimum of 4 hours (with the first releases, but will continually get better and last longer).
+      </p>
     </div>
   </body>
