fixes classes to correct spacing
add some tophead classes to reduce spacing issues

--- a/html/project.html
+++ b/html/project.html
@@ -18,8 +18,8 @@
         <a href="pdf.html">Report PDFs</a>
         <a title="Click here to go to our GitHub repository" href="https://github.com/Stephen-McCluskey/IIT-A2">Our Repository</a>
       </div>
-      <h2 class="nobox">Our Project</h2>
-      <h2>Assignment 2 Plan</h2>
+      <h2 class="nobox tophead">Our Project</h2>
+      <h2 class="tophead">Assignment 2 Plan</h2>
       <p>
         When our group decided to suggest creating a project which incorporates different aspects of ALL our individuals 
         ideas in assignment 1, we spent a significant portion of a group meeting attempting to all agree on the outcome,
@@ -73,8 +73,8 @@
         </ul>
       </p>
  
-      <h2 class="nobox tophead">Assigment 3: Project Plan</h2>
-      <h2>Topic</h2>
+      <h2 class="nobox">Assigment 3: Project Plan</h2>
+      <h2 class="tophead">Topic</h2>
       <p>Our group ‘VibeCheck’ has decided to move forward with the initial proposal of the HUDFitness glasses from Stephen’s
         Assignment 1, and ‘VibeChecks’ Assignment 2. Our group VibeCheck had chosen this project for a multitude of reasons
         ranging from AR’s yet to be fully explored market opportunities, to things such as how cool it’ll be to own a technology
