add padding-top to fix first h2 spacing

--- a/html/project.html
+++ b/html/project.html
@@ -18,7 +18,7 @@
         <a href="pdf.html">Report PDFs</a>
         <a title="Click here to go to our GitHub repository" href="https://github.com/Stephen-McCluskey/IIT-A2">Our Repository</a>
       </div>
-      <h2 class="nobox tophead">Our Project</h2>
+      <h2 class="nobox tophead" style="padding-top: 30px;">Our Project</h2>
       <h2 class="tophead">Assignment 2 Plan</h2>
       <p>
         When our group decided to suggest creating a project which incorporates different aspects of ALL our individuals 
