change tools paragraph to match assignment 3

--- a/index.html
+++ b/index.html
@@ -93,15 +93,15 @@
     <div class="sect" id="tools">
       <h2>Tools</h2>
       <p class="paragraph">
-        For working on this assignment, our group used two main collaboration tools. For writing the report, we used Google Docs, 
-        where we could all contribute to the report content. We found this to be a good solution for making a shared document. 
-        For discussion and team meetings, we used Discord, which allows us to chat and message, so we could have group discussions 
-        while also filling out our document at the same time. </br></br>
-        The shared GitHub repository is useful however our changes only reflect how we migrated individual contributions to the profile section. 
-        Ella was responsible for more of the html as that was one of her strengths, however the rest of the group contributed more to 
-        other sections of the report - essentially, we allocated tasks and roles based on individual strengths, rather than trying to have each member do a little bit of every single section. 
-        This means that our commit repository’s activity log, while still somewhat representative, does not form an entirely comprehensive picture of our group contributions.</br></br>
-        The link to our repository can be found <a href="https://github.com/Stephen-McCluskey/IIT-A2">here</a>.
+        Our website can be found <a href="https://stephen-mccluskey.github.io/IIT-A2/index.html" title="click here to go to the front page of our website">here</a>.
+        </br>
+        Our group GitHub repository can be found here <a href="https://github.com/Stephen-McCluskey/IIT-A2" title="click here to go to our repository">here</a>.
+        </br></br>
+        We have changed two processes from Assignment 2 so that our audit trails will better reflect group contributions. Firstly, since our website is already built, the audit trail of 
+        our GitHub repository should reflect (in majority) content contributions by individual team members. We decided that this is much more accurate than in Assignment 2. </br></br>
+        Secondly, as mentioned above, we have changed access to our Google Doc so that we can see each member’s contribution, by having us all log in to the document - this allows the 
+        document to track our changes. Our Google Doc can be found <a href="https://docs.google.com/document/d/1tvEbfkCiNnqWXeK_w5MLTa24br6HHR4b1hiSW5ijjeo/edit?usp=sharing" title="click here to go to our Google Doc">here</a>.</br></br> 
+        We have continued to use Discord as our major discussion platform - using it to host both group meetings and texting discussions about the assignment. 
       </p>
     </div>
   </body>
