add Career Plans section to homepage

--- a/index.html
+++ b/index.html
@@ -90,6 +90,27 @@
         Stephen sits in the middle of the paradigm with the wish to work with clients with the relative freedom and direction in how the solution is created to avoid tiresome or monotonous work.
       </p>
     </div>
+    <div class="sect" id="careerplan">
+      <h2>Career Plans</h2>
+      <p class="paragraph">
+        In Assignment 2 we identified our ideal jobs and during Assignment 3 we focused further on the skills required. During this process we identified at the core of it they all are founded in writing code with the divergence being what languages we have greater and lesser understanding of. This is opposed to other fields which only a little coding is required yet still being in the Information Technology field, an example of a job in such a field being a Network Technician). Between the four of us, we cover three positions - Software Developer (Stephen), Web Developer (Ella and Daniel) and Data Scientist (William).
+      </p>
+      <p class="paragraph">
+        The common elements are those of any job and or those common to working in technology fields. Having group projects has reinforced the necessary skills of communication both written and interpersonal, problem solving and working within the team along with independently working to accomplish individual tasks that complete the project as a whole.  
+      </p>
+      <p class="paragraph">
+        Being a Web Developer involves a lot of programming, but this can be broken down into a few aspects which have different skill-bases and considerations. Front-end web development involves a lot of consideration of user-experience and user-interface. This may be covered by those positions being represented within the organisation we are working for yet it is clear that an understanding of and adherence to the principles of are essential to a successful product. However, the programming may be a lot more static. Backend development is more dynamic and also involves a lot more logic -- in this way, the backend aspect of web development is more similar to software development. The lines between software and the web are blurring all the time and these two careers are most definitely similar in nature and we believe going forward increasingly so. The SAS model being the example. We can see that  in our careers we will in all likelihood as web developers work with software developers and vice versa.
+      </p>
+      <p class="paragraph">
+        The aspects of software development will depend on what kinds of software Stephen chooses to focus on. If the programs are marketed to the general public, there will potentially be an even split between user-experience and logical, functional programming. However if the software is marketed at businesses or potentially even other IT businesses, then the programming will most-likely be much more logical.
+      </p>
+      <p class="paragraph">
+        Being a Data Scientist, comes in at the opposite end of the spectrum to Web Development. A Data Scientist takes data and analyses it for clients, so the programming is nearly entirely logical, with the only ‘creative’ aspect being potential display of data - a minor aspect of this role. No project worked on by a Software developer or Web developers either today or in the future will not be informed by the collection and analysis of data. Which to use a flawed analogy, Data Science is the Farmer to Software and Web development’s Chef.
+      </p>
+      <p class="paragraph">
+        It has become clear over the course that our ideas of each of our desired career plans will evolve as will the industry so it is the overall skill set and our ability to branch out and adapt that will give us the most opportunity at the conclusion of this course and as we enter our Information Technology careers.
+      </p>
+    </div>
     <div class="sect" id="tools">
       <h2>Tools</h2>
       <p class="paragraph">
