remove jobs section, add group processes section

--- a/index.html
+++ b/index.html
@@ -78,16 +78,22 @@
         as political / idealistic leaning should not really be considered when writing a report, however it would be ideal if the group could manage political views to work cohesively. 
       </p>
     </div>
-    <div class="sect" id="jobs">
-      <h2>Ideal Jobs</h2>
-      <p class="paragraph">
-        When it comes to the ideal jobs of each person there are very few commonalities and the ones that there are not very interesting - mainly that we all focus on a form of development, 
-        whether it be for end-user experience, company security or scientific application. The interesting part - the difference, as hinted at in that sentence - is the different 
-        organisations we wish to work for and who we wish our products to be for; from consumer oriented to academically oriented, case in point.</br></br>
-        Ella and Daniel are very interested in the development and maintenance of end user design and interface managing code that runs the user-facing side of the sites and show desire 
-        to work in a more client and customer dictated role.</br></br>
-        William wishes to work in a more academic role far away from the demands and requests of clients and end users wishing to focus on creative invention.</br></br>
-        Stephen sits in the middle of the paradigm with the wish to work with clients with the relative freedom and direction in how the solution is created to avoid tiresome or monotonous work.
+    <div class="sect">
+      <h2>Group Processes</h2>
+      <p>
+        The team worked well during Assignment 2 (A2) - this was evident by a mark we were all happy to have achieved. Our dialogue continued after the conclusion of A2 as we first anticipated and then received our grade and feedback. The text chat within Discord was utilised during the A2 as well as the conference call functionality. We saw no reason to change as this worked well for us. The availability of team members is always inconsistent by the nature of online study so using this text chat enabled allowance of those differences and avoided anyone missing out. On one conference call did we experience difficulty in the quality of sound. Not sure that this was the fault of the Discord platform of our particular hardware or internet connections. Whilst being an annoyance it was only minor. So no change was required to our means of communication.
+      </p>
+      <p>
+        Our feedback and results mentioned we had not commented well enough on GitHub contributions. We discussed how best to improve that. Firstly we recognised that we all did not have a great deal of experience using GitHub and found the Git push comments a difficult thing to utilise. Some things require explanation whilst others do not. With our contributions clearly defined within the group we lost sight of the person marking our work needing to see this process. 
+      </p>
+      <p>
+        Reflection on this led to the understanding that it is an extremely important functionality within GitHub and heading into using it within professional situations clear records of the trail of work for all to see is core to the successful use of this medium.
+      </p>
+      <p>
+        Having used Google docs for the collaborative contributions of the written aspects of A2 we discussed whether this would serve us to continue to us. Stephen put forward that we place a text document within the GitHub repository and this would provide us with a means to record our contributions and meet the feedback of A2. Daniel asked if we could continue using Google docs as it had worked well for migrating the information into Adobe InDesign for the creation of the final PDF. The team recognised that this was true and we continued with Google docs.
+      </p>
+      <p>
+        Ella suggested we could improve our collaboration by logging in to Google Doc. In A2 the Google Doc had been created by Ella and the rest of the team accessed the link to add text and edit. This resulted in some confusion as Google Docs assigns generic animal monikers to contributors who are not signed in. So it led to amusing discussions of; “are you the squirrel?, no I am the monkey’. So we thought it best to amend this. Again the issue was minor because within the text chat and at the head of the Google Doc we had recorded the breakdown of the individual responsibilities.
       </p>
     </div>
     <div class="sect" id="careerplan">
